# tm-python-book

./: .gitignore  README.md  alloc_test.py  fuse_files.py  justfile  lexical_analysis.py  main.py  protocol.py  pyproject.toml  race_test.py  stash.py
append_only_log/: log_with_recovery.py
dlls/: research.py
hotreload/: README.md
llm_samples/: test_ai_crawler.py  test_llm_begins.py
multiprocessing/: processing_0.py  safely_stop_process_0.py  safely_stop_process_1.py  shared_memory_cache.py
multithreading/: convoy_effect.py  qthreads.py  test_channels.py  test_gil_showcase.py  test_io_showcase.py  test_locking.py  test_producer_consumer.py  test_producer_consumer_hash.py  test_py_processing.py  test_queue.py  test_socket_io.py  test_thread_pool.py  utils.py
parsing/: main.py
patterns/: justfile  pyproject.toml  test_mediator.py  test_saga.py
patterns/libs/saga/: pyproject.toml
patterns/libs/saga/src/saga/: polygon.py
patterns/src/: mediator.py  saga.py
pipeline_crdt/: .gitignore  README.md  pyproject.toml
pipeline_crdt/src/pipeline_crdt/: __main__.py
pipeline_crdt/tests/: conftest.py  test_mem.py
primitives/: __main__.py  test_configparser.py  test_deque.py  test_weakref.py
privacy/: main.py
pynetcode-proto/: README.md
robyn_docker/: Dockerfile  app.py  pyproject.toml
robyn_http/: main.py
robyn_http/static/: index.html
robyn_http/templates/: base.html
simple/: dynamic_type_hints.py  dynamic_type_hints_mypy_inspector.py
simple_typing/: dynamic_type_hints.py  dynamic_type_hints_mypy_inspector.py  protocols.py
smart_questions/: README.md  main.py
taki_ps/: .coveragerc  .env  .env.example.dev  README.md  justfile  pyproject.toml
taki_ps/src/taki_ps/: __init__.py  __main__.py  asgi.py  commands.py
taki_ps/src/taki_ps/settings/: settings.py
tg_user_bot/: test_retriev.py
tooling/: make_video_preview.py  podman_stats.py  queue_rename.py  setup_db.py  upcast_env.py
tui/: case_curses.py  test_curses.py
