[project]
name = "tm-python-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.3.0",
    "pyside6>=6.9.0",
    "pytest>=8.3.5",
]

[dependency-groups]
research = [
    "yappi>=1.6.10",
]

[tool.uv.workspace]
members = [
    "patterns",
]
