[project]
name = "tm-python-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "anyio>=4.9.0",
 "bs4>=0.0.2",
 "crawl4ai>=0.7.2",
 "faker>=37.3.0",
 "httpx>=0.28.1",
 "hypothesis>=6.136.7",
 "lmstudio>=1.4.1",
 "playwright>=1.54.0",
 "pyside6>=6.9.0",
 "pytest>=8.3.5",
 "pytest-asyncio>=1.1.0",
]

[dependency-groups]
dev = ["msgspec"]
research = ["yappi>=1.6.10"]

[tool.uv.workspace]
members = []
