[project]
name = "patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
default-groups = ["dev", "linting", "test"]

[tool.uv.workspace]
members = ["libs/*"]


[dependency-groups]
dev = ["aiosqlite>=0.21.0"]
linting = [
  "ruff>=0.0.287",
  "types-click",
  "types-passlib",
  "types-python-jose",
  "types-pyyaml",
  "types-redis",
  "asyncpg-stubs",
]
test = [
  "hypothesis>=6.130.2",
  "httpx>=0.28.1",
  "coverage",
  "pytest",
  "pytest-asyncio",
  "pytest-anyio",
  "pytest-xdist",
  "pytest-mock",
  "pytest-cov",
  "pytest-sugar",
  "pytest-sqlalchemy>=0.2.1",
  "pytest-databases[redis]>=0.1.0",
  "pytest-timeout>=2.3.1",
  "tabulate>=0.9.0",
]

[tool.pytest.init_options]
python_files = "*.py"
testpaths = ["src"]
