[project]
name = "pipeline-crdt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TakiMoysha", email = "mpwema782@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "memray>=1.15.0",
    "pympler>=1.1",
]

[project.scripts]
pipeline-crdt = "pipeline_crdt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "memray>=1.15.0",
    "pytest>=8.3.4",
]
