[project]
name = "saga"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TakiMoysha", email = "36836047+TakiMoysha@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



